# Yasol

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build_Yasol.bat  configure
QBPSolver/: makeQBPSolver
QBPSolver/src/: ConstraintWatcher.h  DataStructures.h  FeasibilityPump.h  HashTable.h  Heap.h  IntTypes.h  QBPSolver.cpp  QBPSolver.h  QBPSolver_All.cpp  QBPSolver_ctrl.cpp  QBPSolver_hl.cpp  QBPSolver_ml.cpp  QBPSolver_tl.cpp  UnionFind.h  cliques.cpp  cliques.h  commprint.cpp  commprint.h  debug.h  dependencies.h  multiset_plus.h  nomp.h  resizer.cpp
Solver/: Solver.cpp  makeSolver
Solver/include/Algorithms/: Algorithm.hpp  Algorithms.hpp
Solver/include/Algorithms/nd/: NbdMaster.hpp  NbdStageSolver.hpp  NbdStructs.hpp
Solver/include/Algorithms/qea/: QuantifierEliminationAlgorithm.hpp
Solver/include/Algorithms/qlp2lp/: Qlp2Lp.hpp
Solver/include/Algorithms/saa/: SAA.hpp
Solver/include/Datastructures/: Datastructures.hpp
Solver/include/Datastructures/components/: QpObjFunc.hpp  QpRhs.hpp  QpVar.hpp
Solver/include/Datastructures/numbers/: Numbers.hpp  QpDouble.hpp  QpNum.hpp  QpRational.hpp  myRatNum.hpp
Solver/include/Datastructures/qlp/: Constraint.hpp  Qlp.hpp  QlpMatCoeff.hpp
Solver/include/ExternSolvers/: ExtSolverParameters.h  QpExtSolCBC.hpp  QpExtSolCBC.hpp~  QpExtSolCLP.hpp  QpExtSolCLP.hpp~  QpExtSolCplexC.hpp  QpExtSolCplexC.hpp~  QpExtSolGrbC.hpp  QpExtSolHighs.hpp  QpExtSolHighs.hpp~  QpExtSolScip.hpp  QpExternSolver.hpp  QpExternSolver.hpp~  QpExternSolvers.hpp  QpExternSolvers.hpp~
Solver/include/MemoryManagement/: IMemoryManager.hpp  Interfaces.hpp  MemoryManager.hpp
Solver/include/Settings/: Settings.hpp
Solver/include/Test/: Test.hpp
Solver/include/Utilities/: Exceptions.hpp  Exceptions.hpp~  Log.hpp  NewTime.hpp  Parser.hpp  QlpConverter.hpp  QlpRelaxer.hpp  QlpSplitter.hpp  QlpStageRelaxer.hpp  QlpStageSolver.hpp  QlpStageSolver.hpp~  Rng.hpp  Timer.hpp  ToolBox.hpp
Solver/include/Utilities/ExternCode/: QIP2QBP.h  QLPReader.hpp
Solver/src/Algorithms/: Algorithm.cpp
Solver/src/Algorithms/nd/: NbdMaster.cpp  NbdStageSolver.cpp  NbdStageSolver.cpp~
Solver/src/Algorithms/qea/: QuantifierEliminationAlgorithm.cpp
Solver/src/Algorithms/qlp2lp/: Qlp2Lp.cpp
Solver/src/Algorithms/saa/: SAA.cpp
Solver/src/Datastructures/components/: QpObjFunc.cpp  QpRhs.cpp  QpVar.cpp
Solver/src/Datastructures/numbers/: QpDouble.cpp  QpRational.cpp
Solver/src/Datastructures/qlp/: Constraint.cpp  Qlp.cpp  QlpMatCoeff.cpp
Solver/src/ExternSolvers/: QpExtSolCBC.cpp  QpExtSolCLP.cpp  QpExtSolCplexC.cpp  QpExtSolGrbC.cpp  QpExtSolHighs.cpp  QpExtSolHighs.cpp_ORG  QpExtSolScip.cpp  QpExternSolvers.cpp
Solver/src/MemoryManagement/: MemoryManager.cpp
Solver/src/Test/: Test.cpp
Solver/src/Utilities/: Log.cpp  Parser.cpp  Parser.cpp~  QlpConverter.cpp  QlpRelaxer.cpp  QlpSplitter.cpp  QlpStageRelaxer.cpp  QlpStageSolver.cpp
Solver/src/Utilities/ExternCode/: QIP2QBP.cpp  QLPReader.cpp
Yasol/: makeYasol
Yasol/Debug/: Yasol.ini
Yasol/Debug/FirstInstances/: ExampleFromHomepage.qlp  FileFormatExampleHomepage.qlp  MCN_40.qlp  MyExample.qlp  Runway.qlp
Yasol/src/: CutAdder.cpp  CutAdder.h  GFkSolve.h  MipSolvers.cpp  MipSolvers.h  Yasol.cpp  nomp.h  yInterface.cc  yInterface.h
cmake/modules/: FindCplex.cmake  FindHighs.cmake
examples/: MCN.qlp  MCN_DDU.qlp  assignment.qlp  assignment_U.qlp  knapsack.qlp  lia.qlp  lotsizing.qlp  scheduling.qlp  scheduling_U.qlp  selection.qlp  selection_all.qlp
graphClass/: Graph  Vec.h  graphClass.h  main.cpp  makefile  multiset_plus.h
mctsClass/: mctsClass.h
mpiClass/: nomp.h
myCMakeProject/: CMakeLists.txt
myCMakeProject/cmake/modules/: FindCoin.cmake  FindCplex.cmake  FindHighs.cmake
myCMakeProject/src/: myYasol.cpp
setup/: setup-coin.sh  setup-highs.sh
